# MioLink

./: .gitignore  .gitmodules
.github/workflows/: pre-release.yml
firmware/: CMakeLists.txt
firmware/boards/: CMakeLists.txt  auto.h  miolink.h  miolink_pico.h
firmware/boards/pinout/: miolink_pico_pinout.h  miolink_rev_a_pinout.h  miolink_rev_b_pinout.h  pico_pinout.h  pico_w_pinout.h
firmware/config/: CMakeLists.txt
firmware/config/FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h
firmware/config/SEGGER/: CMakeLists.txt  SEGGER_RTT_Conf.h  SEGGER_SYSVIEW_Conf.h  SEGGER_SYSVIEW_Config_FreeRTOS.c
firmware/config/tinyusb/: CMakeLists.txt  tusb_config.h
firmware/include/bmp/: platform.h
firmware/linker/: memmap_debug.ld.in  memmap_release.ld.in
firmware/source/bmp/: platform_boards.c  usb_serial.c
firmware/src/: CMakeLists.txt  main.c
firmware/src/bmp_platform/: CMakeLists.txt  platform.c  platform.h  platform_boards.c
firmware/src/bmp_port/: CMakeLists.txt  gdb_if.c
firmware/src/bmp_rtt_swo/: CMakeLists.txt  rtt_if.c  swo.h  traceswoasync.c
firmware/src/bmp_tap/: CMakeLists.txt  tap_pio.c
firmware/src/hw_extras/: CMakeLists.txt
firmware/src/pio_programs/: CMakeLists.txt  pio_swd_pico.pio
firmware/src/target_serial/: CMakeLists.txt  usb_serial.c
firmware/src/usb/: CMakeLists.txt  usb.c
firmware/src/version/: CMakeLists.txt
